--- a/proyectofinal/css/estilos.css
+++ b/proyectofinal/css/estilos.css
@@ -42,6 +42,7 @@ h2 {
 
 .cards {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     margin: 20px auto;
 
@@ -50,7 +51,7 @@ h2 {
 .card {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     width: 300px;
     height: 300px;
     margin: 50px 15px;
@@ -77,3 +78,4 @@ main {
     font-weight: 700;
     font-size: 15px;
 }
+
