--- a/proyectofinal/css/estilos.css
+++ b/proyectofinal/css/estilos.css
@@ -44,7 +44,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin: 20px auto;
+    margin: 0 auto;
 
 }
 
@@ -52,6 +52,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: center;
     width: 300px;
     height: 300px;
     margin: 50px 15px;
@@ -72,6 +73,7 @@ main {
 
 .btn {
     padding: 5px 30px;
+    margin-top: 10px;
     background-color: rgb(16, 204, 16);
     color: rgb(7, 0, 0);
     cursor: pointer;
