--- a/proyectofinal/css/estilos.css
+++ b/proyectofinal/css/estilos.css
@@ -56,7 +56,7 @@ h2 {
     width: 300px;
     height: 300px;
     margin: 50px 15px;
-    padding: 10px;
+    padding: 20px;
 }
 
 .card h3 {
@@ -79,5 +79,70 @@ main {
     cursor: pointer;
     font-weight: 700;
     font-size: 15px;
+}
+
+.carritoLogo {
+    display: flex;
+    align-items: center;
+}
+
+.contador {
+    color: rgb(255, 255, 255);
+    font-size: 25px;
+    display: inline-block;
+    font-weight: 400;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: #111111bd;
+    display: flex;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal_container {
+    margin: auto;
+    width: 90%;
+    background-color: #fff;
+    border-radius: 6px;
+    max-width: 600px;
+    max-height: 90%;
+    padding: 3em 2,5em;
+    display: grid;
+    gap: 1em;
+    place-items: center;
+    grid-auto-columns: 100%;
+    overflow: scroll;
+}
+
+.modal_show {
+    opacity: 1;
+    pointer-events: unset;
+}
+
+.buscador {
+    width: 20%;
+    border: 2px, solid, #000;
+    text-align: center;
+    margin: 10px;
+}
+
+.eliminar {
+    background-color: rgb(238, 10, 10);
+}
+
+.contenedor_total {
+    display: block;
+    margin-top: 70px;
+    font-weight: 700;
+}
+
+.contenedor_total span {
+    font-size: 30px;
 }
 
